[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/nine-patch-with-header.png" type="Texture" id=1]
[ext_resource path="res://scenes/planet_screen/panet_screen.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/main_theme.tres" type="Theme" id=3]

[node name="PlanetScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -208, 441 )
mouse_filter = 1
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 360.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
region_rect = Rect2( 0.187962, 97.5782, 320.191, 139.108 )
patch_margin_left = 40
patch_margin_top = 92
patch_margin_right = 43
patch_margin_bottom = 114

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 33.0
margin_right = -32.0
margin_bottom = -32.0
mouse_filter = 2

[node name="MainVBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_right = 296.0
margin_bottom = 655.0
mouse_filter = 2

[node name="WelcomeRow" type="HBoxContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_right = 296.0
margin_bottom = 32.0

[node name="WelcomeLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/WelcomeRow"]
margin_right = 296.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
text = "Welcome to {planet-name}!"
align = 1
valign = 1

[node name="LevelRow" type="HBoxContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 36.0
margin_right = 296.0
margin_bottom = 68.0

[node name="LevelTitleLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/LevelRow"]
margin_right = 34.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Level"
valign = 1

[node name="LevelLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/LevelRow"]
margin_left = 38.0
margin_right = 54.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "12"
valign = 1

[node name="FuncsRow" type="HBoxContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 72.0
margin_right = 296.0
margin_bottom = 104.0

[node name="FundsTitleLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/FuncsRow"]
margin_right = 38.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Funds"
valign = 1

[node name="FundsLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/FuncsRow"]
margin_left = 42.0
margin_right = 78.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "120cr"
valign = 1

[node name="PanetDescriptionRow" type="HBoxContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 108.0
margin_right = 296.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescriptionLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/PanetDescriptionRow"]
margin_right = 296.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "A planet with a balanced ecosystem, and a focus on sustainable technology."
autowrap = true

[node name="RetireButton" type="Button" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 384.0
margin_right = 296.0
margin_bottom = 435.521
theme = ExtResource( 3 )
text = "Retire"

[node name="TradeButton" type="Button" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 439.0
margin_right = 296.0
margin_bottom = 490.521
theme = ExtResource( 3 )
text = "Trade"

[node name="MapButton" type="Button" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 494.0
margin_right = 296.0
margin_bottom = 545.521
theme = ExtResource( 3 )
text = "Map"

[node name="UpgradeButton" type="Button" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 549.0
margin_right = 296.0
margin_bottom = 600.521
theme = ExtResource( 3 )
text = "Upgrade"

[node name="FuelButton" type="Button" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 604.0
margin_right = 296.0
margin_bottom = 655.521
theme = ExtResource( 3 )
text = "Fuel"

[connection signal="pressed" from="NinePatchRect/MarginContainer/MainVBoxContainer/RetireButton" to="." method="_on_RetireButton_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/MainVBoxContainer/TradeButton" to="." method="_on_TradeButton_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/MainVBoxContainer/MapButton" to="." method="_on_MapButton_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/MainVBoxContainer/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
